# xnova_c2

./: README.md
xnova_c2/: client-cert.pem  client-key.pem  requirements.txt  xnova.py
xnova_c2/server/: LICENSE  c2_server.py  ca-cert.pem  ca-key.pem  gen_shell.py  install.sh  payload_encrypter.py  requirements.txt  server-cert.pem  server-key.pem  server-req.pem  websocket.py
xnova_c2/server/code/: README.md  donut
xnova_c2/server/code/examples/: dynamic.c  static.c
xnova_c2/server/code/initial_beacon/: Cargo.toml
xnova_c2/server/code/initial_beacon/src/: main.rs
xnova_c2/server/code/lib/: donut.h
xnova_c2/server/code/modules/exec/: Cargo.toml
xnova_c2/server/code/modules/exec/src/: main.rs
xnova_c2/server/code/modules/file_del/: Cargo.toml
xnova_c2/server/code/modules/file_del/src/: main.rs
xnova_c2/server/code/modules/file_list/: Cargo.toml
xnova_c2/server/code/modules/whoami/: Cargo.toml
xnova_c2/server/code/modules/whoami/src/: main.rs
xnova_c2/server/code/scream/: Cargo.toml  encrypted_beacon
xnova_c2/server/code/scream/pengine/: Cargo.toml
xnova_c2/server/code/scream/pengine/src/: lib.rs
xnova_c2/server/code/scream/src/: main.rs
