[package]
name = "file_list"
version = "0.1.0"
edition = "2021"
description = "List files inside a folder from the operating system"

[dependencies]

[profile.release]
opt-level = 3     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.