[package]
name = "whoami"
version = "0.1.0"
edition = "2021"
description = "Get current user name - test"

[dependencies]
ntapi = "0.4.1"
obfstr = "0.4.3"
winapi = { version = "0.3.9", features = ["ntdef", "ntstatus", "sddl", "winbase", "winnt"] }

[profile.release]
opt-level = 3     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.
